@@ -118,6 +118,7 @@
 - (IBAction)adbRemoveEntry:(id)sender;
 - (IBAction)adbCancel:(id)sender;
 - (IBAction)adbEditEntry:(id)sender;
+- (IBAction)adbAddEntry:(id)sender;
 - (IBAction)adbOk:(id)sender;
 - (IBAction) executeABCommand: (id) sender;
 
